# SimpleGeant4Programs

./: test.txt
Box/: CMakeLists.txt  main.cc
Box/include/: MyPrimaryGeneratorAction.hh
Box/src/: MyDetectorConstruction.cc  MyPrimaryGeneratorAction.cc
OpticalPhoton/: .main.cpp.swp  CMakeLists.txt  ftree.C  main.cpp  main.cpp.bk
OpticalPhoton/CommonHelpers/: CommonHelpers.cpp  CommonHelpers.h
OpticalPhoton/CommonHelpers/test/: TestQNearQFar_ExpData.cpp
OpticalPhoton/MacFiles/: test.mac  vis.mac
OpticalPhoton/inc/: MyDetectorConstruction.h  MyDetectorMessenger.h  MyEventAction.h  MyHit.h  MyPrimaryGeneratorAction.h  MySD.h  MySteppingAction.h  ParentSD.h  ScintHit.h  ScintillatorSD.h  TestBoxSD.h  Write.h
OpticalPhoton/rootmacros/: ftree.C
OpticalPhoton/src/: B1ActionInitialization.cc  MyDetectorConstruction.cpp  MyDetectorMessenger.cpp  MyEventAction.cpp  MyPrimaryGeneratorAction.cpp  MySD.cpp  MySteppingAction.cpp  ScintHit.cpp  ScintillatorSD.cpp  Write.cpp
Prog1/: CMakeLists.txt  Instructions.docx  OrientationProgramme.pptx  cmd.file  main.cpp  main.cpp~
Prog1/MacFiles/: beam.mac  shikha.mac  test.mac  vis.mac
Prog1/inc/: B1EventAction.hh  B1Run.hh  B1RunAction.hh  B1SteppingAction.hh  Helpers.h  MyDetectorConstruction.h  MyHit.h  MyPrimaryGeneratorAction.h  MyRandom.txt  MySD.h  MyStepper.h  PrimaryGeneratorMessenger.hh
Prog1/src/: B1ActionInitialization.cc  B1EventAction.cc  B1Run.cc  B1RunAction.cc  B1SteppingAction.cc  Helpers.cpp  MyDetectorConstruction.cpp  MyPrimaryGeneratorAction.cpp  MySD.cpp  MyStepper.cpp  PrimaryGeneratorMessenger.cc
Prog1/test/: readData.cpp  stripcoord.cpp
SensitiveDetectorExample/: CMakeLists.txt  main.cpp  testRndm.cpp
SensitiveDetectorExample/MacFiles/: vis.mac
SensitiveDetectorExample/cmake/modules/: FindTrackingLib.cmake
SensitiveDetectorExample/inc/: MyDetectorConstruction.h  MyHit.h  MySD.h  Output.h
SensitiveDetectorExample/src/: MyDetectorConstruction.cpp  MyPrimaryGeneratorAction.cpp  MySD.cpp  Output.cpp
